deleting unused resource, make update ui in (tab layout for follow and repository user) activity_detail_user.xml, make some adjusment in themes.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="txt_repository">Repository</string>
     <string name="txt_followings">Followings</string>
     <string name="txt_followers">Followers</string>
+    <string name="txt_200">200</string>
 </resources>
