--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="search">Search User</string>
     <string name="search_hint">Enter Username</string>
     <string name="txt_data_empty">Data Not Found</string>
+    <string name="language">Language</string>
 </resources>
