inisialisasi fragment follow dan repository, bikin viewmodel buat detail,follow,dan repository

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="search_hint">Enter Username</string>
     <string name="txt_data_empty">Data Not Found</string>
     <string name="language">Language</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
