nerapin viewpager, implement satu fragment buat follower dan following, namabah util buat NumberFormat.kt, bikin interface baru buat repository, dan beberapa perubahan kecil di UserRepositoryViewModel.kt, serta tampilan detail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="language">Language</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="repository">Repository</string>
+    <string name="followers">Followers</string>
+    <string name="followings">Followings</string>
 </resources>
