menambahkan menu favorite, dan menambahkan FAB favorite user di detail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="repository">Repository</string>
     <string name="followers">Followers</string>
     <string name="followings">Followings</string>
+    <string name="txt_fab_favorite">Floating Action Button Add Favorite User</string>
+    <string name="menu_favorite">Menu Favorite</string>
 </resources>
